# string-matching-algorithms

./: CMakeLists.txt  KMP.cpp  KMP.h  README.md  boyerMoore.cpp  boyerMoore.h  main.cpp  text.txt  trivialMatching.cpp  trivialMatching.h
.github/workflows/: build.yaml
